<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/irTelaCadastro"
    tools:context=".fragment.TelaCadastroProdutosFragment"
    android:layout_margin="@dimen/margin_16dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_de_produtos"
        android:textSize="@dimen/titulo_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditNomeDeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_produto"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/EditQuantidadeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantidade_do_produto"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/EditValorProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_unitario_do_produto"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/EditReceita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receita"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/botaoCadastraNovoproduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_novo_produto"
        android:backgroundTint="@color/vermelho"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/botaoVerProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_produto"
        android:backgroundTint="@color/verde"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/botaoValorTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_total"
        android:backgroundTint="@color/azul_escuro"
        android:textAllCaps="true"/>

</LinearLayout>
</ScrollView>